package no.elhub.auth.domain.request

enum class RequestStatus {
    Accepted,
    Expired,
    Pending,
    Rejected,
}
