package no.elhub.auth.domain.request

enum class RequestType {
    ChangeOfSupplierConfirmation,
}
