@startuml datamodel
left to right direction
'top to bottom direction

' The PartyId is a type that is used to identify a party
' It can be an elhub user Id or a GLN. It is a string because it can be a UUID or a GLN-number
' type PartyId = String

enum AuthorizationGrantStatus {
  Active
  Exhausted
  Expired
  Revoked
}

enum PermissionType {
  ChangeOfBalanceSupplierForPerson
  MoveInAndChangeOfBalanceSupplierForPerson
}

enum AuthorizationDocumentStatus {
  Expired
  Pending
  Rejected
  Signed
}

enum RequestStatus {
  Accepted
  Expired
  Pending
  Rejected
}

enum AuthorizationResource {
  MeteringPoint
  Organization
  OrganizationEntity
  Person
  System
}

enum PartyType {
  Organization
  OrganizationEntity
  Person
}

enum DocumentType {
  ChangeOfBalanceSupplierForPerson
  MoveInAndChangeOfBalanceSupplierForPerson
}

enum RequestType {
  ChangeOfBalanceSupplierForPerson
  MoveInAndChangeOfBalanceSupplierForPerson
}

entity AuthorizationGrant {
  id: UUID
  --
  status: AuthorizationGrantStatus
  grantedFor: UUID, FK→AuthorizationParty /' The party for whom the grant is made '/
  grantedBy: UUID, FK→AuthorizationParty /' The party that made/signed the grant '/
  grantedTo: UUID, FK→AuthorizationParty /' The party that is given the rights by the grant '/
  grantedAt: DateTime
  validFrom: DateTime
  validTo: DateTime
}

' Used to store metadata related to the AuthorizationGrant
entity AuthorizationGrantProperty {
  authorizationGrantId: UUID, FK→AuthorizationGrant
  key: String
  --
  value: String
  createdAt: DateTime
}

entity AuthorizationAuditLog {
  authorizationGrantId: UUID, FK->AuthorizationGrant
  changedAt: DateTime
  --
  changedBy: UUID, FK→AuthorizationParty
  valueChanged: String
  valueBefore: String
  valueAfter: String
  message: String
}

entity AuthorizationRequest {
  id: UUID
  --
  type: RequestType
  status: AuthorizationRequestStatus
  requestedBy: UUID, FK→AuthorizationParty  /' The party that made the request '/
  requestedFrom: UUID, FK→AuthorizationParty /' The party that the request is made to '/
  requestedTo: UUID, FK→AuthorizationParty   /' The party that is expected to respond to the request '/
  metadata: JSONB
  createdAt: DateTime
  updatedAt: DateTime
  validTo: Date
}

' In this model it is assumed that the metadata is stored in the document.
entity AuthorizationDocument {
  id: UUID
  --
  title: String
  type: DocumentType
  file: Blob
  status: AuthorizationDocumentStatus
  requestedBy: UUID, FK→AuthorizationParty  /' The party that requested the document '/
  requestedFrom: UUID, FK→AuthorizationParty /' The party that the document is issued for '/
  requestedTo: UUID, FK→AuthorizationParty   /' The party that is expected to sign the document '/
  metadata: JSONB
  createdAt: DateTime
  updatedAt: DateTime
}

entity AuthorizationDocumentSignatories {
  authorizationDocumentId: UUID, FK→Document
  requestedFrom: UUID, FK→AuthorizationParty
  --
  signedBy: UUID, FK→AuthorizationParty
  signedAt: DateTime
}

entity AuthorizationGrantScope {
  authorizationGrantId: UUID, FK→AuthorizationGrant
  authorizationScopeId: BigInt, FK→AuthorizationScope
}

entity AuthorizationDocumentScope {
  authorizationDocumentId: UUID, FK→AuthorizationDocument
  authorizationScopeId: BigInt, FK→AuthorizationScope
}

entity AuthorizationRequestScope {
  authorizationRequestId: UUID, FK→AuthorizationRequest
  authorizationScopeId: BigInt, FK→AuthorizationScope
}

entity AuthorizationScope {
  id: UUID
  authorizedResourceType: AuthorizationResource
  authorizedResourceId: String
  permissionType: PermissionType
  --
  createdAt: DateTime
}

entity AuthorizationParty {
  id: UUID
  --
  type: PartyType
  partyId: String
  createdAt: DateTime
}

' Relationships
AuthorizationGrant "1" *-- "0..*" AuthorizationGrantProperty
AuthorizationGrant "0..1" *-- "1..*" AuthorizationGrantScope
AuthorizationGrant "1" *-- "0..*" AuthorizationAuditLog
AuthorizationGrant --> AuthorizationGrantStatus
AuthorizationGrant --> AuthorizationParty
AuthorizationScope --> AuthorizationResource
AuthorizationScope --> PermissionType
AuthorizationScope "1" *-- "0..*" AuthorizationGrantScope
AuthorizationScope "1" *-- "0..*" AuthorizationRequestScope
AuthorizationScope "1" *-- "0..*" AuthorizationDocumentScope
AuthorizationDocument "1" *-- AuthorizationDocumentSignatories
AuthorizationDocument "1..*" *-- "*" AuthorizationDocumentScope
AuthorizationDocument --> DocumentType
AuthorizationDocument --> AuthorizationDocumentStatus
AuthorizationDocument --> AuthorizationParty
AuthorizationDocumentSignatories -> AuthorizationParty
AuthorizationRequest "1" *-- "1..*" AuthorizationRequestScope
AuthorizationRequest --> RequestType
AuthorizationRequest --> RequestStatus
AuthorizationParty --> PartyType

@enduml
